# bholetrace

./: .gitmodules  CMakeLists.txt  Makefile  README  result.txt  rk4_r0.py
include/bholetrace/: keys.hpp  load_textures.hpp
include/blkhole/: loadshaders.hpp  shaders.hpp
lib/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
src/: load_shaders.cpp  load_textures.cpp  loadshaders.cpp  main.cpp  shaders.cpp
src/shader/: raycast.comp  render.frag  render.vert
src/shaders/: raycast.comp  render.frag  render.vert
